better spacing for COPY button on wiki pages (avoid collision with "last modified")
git-svn-id: https://trac-hacks.org/svn@18039 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/infosnippetplugin/trunk/infosnippet/htdocs/infosnippet.css
+++ b/infosnippetplugin/trunk/infosnippet/htdocs/infosnippet.css
@@ -17,4 +17,5 @@ border-radius: 1em;
 padding: 0.3em 0.7em .3em;
 color: #808080;
 margin-left: 2em;
+margin-right: 2em;
 } 
